cmake_minimum_required(VERSION 3.11)
project(testThreadPool)

aux_source_directory(${CMAKE_CURRENT_LIST_DIR} DIR_SRCS)
add_executable(${PROJECT_NAME} ${DIR_SRCS})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
target_link_libraries(${PROJECT_NAME} PRIVATE ThreadPool)

add_test (NAME test_pool1 COMMAND testThreadPool future)
add_test (NAME test_pool2 COMMAND testThreadPool normal)
add_test (NAME test_pool3 COMMAND testThreadPool pool_util)

install(TARGETS ${PROJECT_NAME} 
		RUNTIME DESTINATION ${PROJECT_NAME}/bin
		LIBRARY DESTINATION ${PROJECT_NAME}/bin
		ARCHIVE DESTINATION ${PROJECT_NAME}/lib)